@@ -4747,3 +4747,5 @@
          replace deprecated GtkStock (Sergio).
 20150322 ui/gtk/browse.c: clear out row mark in tape browser when selecting
          another block (Sergio).
+20150328 debugger/breakpoint.c: store the matched breakpoint before removing it
+         from the list and freeing it (fixes bug #317) (Tom Seddon).
